--- a/css/main.css
+++ b/css/main.css
@@ -99,7 +99,7 @@ from {
 }
 to {
 	transform: rotate(360deg)
-	           translate(-120px) 
+	           translate(-120px)
 	           rotate(-360deg);
 }
 }
@@ -112,7 +112,7 @@ from {
 }
 to {
 	transform: rotate(360deg)
-	           translate(0px, 120px) 
+	           translate(0px, 120px)
 	           rotate(-360deg);
 }
 }
@@ -125,7 +125,7 @@ from {
 }
 to {
 	transform: rotate(360deg)
-	           translate(120px) 
+	           translate(120px)
 	           rotate(-360deg);
 }
 }
@@ -138,7 +138,7 @@ from {
 }
 to {
 	transform: rotate(360deg)
-	           translate(0px, -120px) 
+	           translate(0px, -120px)
 	           rotate(-360deg);
 }
 }
@@ -221,7 +221,7 @@ to {
 	}
 	to {
 		transform: rotate(360deg)
-		           translate(-210px) 
+		           translate(-210px)
 		           rotate(-360deg);
 	}
 }
@@ -234,7 +234,7 @@ to {
 	}
 	to {
 		transform: rotate(360deg)
-		           translate(0px, 210px) 
+		           translate(0px, 210px)
 		           rotate(-360deg);
 	}
 }
@@ -247,7 +247,7 @@ to {
 	}
 	to {
 		transform: rotate(360deg)
-		           translate(210px) 
+		           translate(210px)
 		           rotate(-360deg);
 	}
 }
@@ -260,7 +260,7 @@ to {
 	}
 	to {
 		transform: rotate(360deg)
-		           translate(0px, -210px) 
+		           translate(0px, -210px)
 		           rotate(-360deg);
 	}
 }
@@ -268,4 +268,174 @@ to {
 		width: 275px;
 	}
 
+}
+
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: sans-serif;
+  background-color: #2E3445;
+}
+
+#orbit-system {
+  position: relative;
+  width: 18em;
+  height: 18em;
+  margin: 0 auto;
+}
+
+.system, .system2 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  -webkit-transform: rotateX(75deg) rotateY(-30deg);
+  transform: rotateX(75deg) rotateY(-30deg);
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+}
+
+.system2 {
+  -webkit-transform: rotateX(75deg) rotateY(30deg);
+  transform: rotateX(75deg) rotateY(30deg);
+}
+
+.planet, .satellite-orbit, .satellite {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+}
+
+.planet {
+  background-color: #511b3c;
+  width: 9em;
+  height: 9em;
+  margin-top: -4.5em;
+  margin-left: -4.5em;
+  border-radius: 50%;
+
+  text-align: center;
+  line-height: 9em;
+
+  -webkit-transform: rotateY(30deg) rotateX(-75deg);
+  transform: rotateY(30deg) rotateX(-75deg);
+}
+
+.satellite-orbit {
+	width: 16em;
+  height: 16em;
+  margin-top: -8em;
+  margin-left: -8em;
+
+  -webkit-animation-name: orbit;
+  animation-name: orbit;
+  -webkit-animation-duration: 10s;
+  animation-duration: 10s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
+}
+
+.satellite {
+  top: 100%;
+  width: 3em;
+  height: 3em;
+  margin-top: -1.5em;
+  margin-left: -1.5em;
+
+  text-align: center;
+  line-height: 3em;
+
+  -webkit-animation-name: invert-orbit;
+  animation-name: invert-orbit;
+  -webkit-animation-duration: 10s;
+  animation-duration: 10s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
+}
+
+.system2 .satellite {
+    top: auto;
+    bottom: 100%;
+
+    -webkit-animation-name: invert-orbit2;
+  animation-name: invert-orbit2;
+  -webkit-animation-duration: 10s;
+  animation-duration: 10s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
+}
+
+@-webkit-keyframes orbit {
+    0% {
+        transform: rotateZ(0deg) rotateX(0deg);
+    }
+    50% {
+        transform: rotateZ(180deg) rotateX(10deg);
+    }
+    100% {
+        transform: rotateZ(360deg) rotateX(0deg);
+    }
+}
+@keyframes orbit {
+    0% {
+        transform: rotateZ(0deg) rotateX(0deg);
+    }
+    50% {
+        transform: rotateZ(180deg) rotateX(10deg);
+    }
+    100% {
+        transform: rotateZ(360deg) rotateX(0deg);
+    }
+}
+
+/*
+In order to invert the rotation, do the rotate* transforms in reverse order.
+
+Here, we rotated the system with rotateX(75deg) rotateY(-30deg), and then we are animating the rotation of the orbit with rotateZ(0-360deg). To reverse that, we need to reverse the last transform applied (rotateZ), then rotateY, then rotateX.
+
+The rotateX/Y reversal is easy since it's not animated, so just use its opposite (30deg, -75deg). The rotateZ is trickier since it's animating, but since it's rotating from 0 to 360, we just need to animate the satellite from 360 to 0.
+*/
+@-webkit-keyframes invert-orbit {
+    0% {
+        transform: rotateZ(360deg) rotateY(30deg) rotateX(-75deg);
+    }
+
+    100% {
+        transform: rotateZ(0deg) rotateY(30deg) rotateX(-75deg);
+    }
+}
+@keyframes invert-orbit {
+    0% {
+        transform: rotateZ(360deg) rotateY(30deg) rotateX(-75deg);
+    }
+
+    100% {
+        transform: rotateZ(0deg) rotateY(30deg) rotateX(-75deg);
+    }
+}
+
+@keyframes invert-orbit2 {
+    0% {
+        transform: rotateZ(360deg) rotateY(-30deg) rotateX(-75deg);
+    }
+
+    100% {
+        transform: rotateZ(0deg) rotateY(-30deg) rotateX(-75deg);
+    }
 }
